--- a/index.html
+++ b/index.html
@@ -96,14 +96,14 @@
                             <h4>Junior DevOps Engineer</h4>
                             <p>
                             <ul>
-                              <li>Ensuring the use of continuous delivery pipelines and tools to fully automate deployment.</li>
-                              <li>Involvement in the design of automated solutions.</li>
-                              <li>Automation of operational functions with a security first mindset.</li>
-                              <li>Creation of new operational solutions both in the Cloud and on Premise.</li>
-                              <li>Automation and configuration management of virtual infrastructure and services.</li>
+                              <li>Creating Terraform CI/CD Pipelines.</li>
+                              <li>Deploying websites to App services.</li>
+                              <li>Provisioning AWS resources manually and using Infrastructure as Code (Terraform).</li>
+                              <li>Supporting developers with issues in AWS.</li>
+                              <li>Creating release Pipelines in Azure.</li>
+                              <li>Creating Infrastructure as Code (Terraform) Automation testing scripts.</li>
                               <li>Set up and standardisation of monitoring solutions.</li>
                               <li>End state documentation of solutions and work with presentations.</li>
-                              <li>CI/CD platforms (GitHub).</li>
                             </ul>
 
                         </div>
