--- a/index.html
+++ b/index.html
@@ -181,7 +181,9 @@
                <div class="twelve columns">
 
                   <a href="https://www.credly.com/badges/b28523b4-bd1a-48ca-994d-79db76d6974a/public_url"><img class="mb-5" src="img/aws-certified-cloud-practitioner.png" alt="..." /></a>
-                  <p class="info"><em class="date">December 2021</em></p>
+                  <p class="info"><em class="date">December 2021</em></p><br>
+                  <a href="https://www.credly.com/badges/06eaf2e4-ed89-468c-9538-f793aa8b7823/public_url"><img class="mb-5" src="img/image2.png" alt="..." /></a>
+                  <p class="info"><em class="date">December 2022</em></p>
 
                </div>
     <!-- ./badges -->
@@ -211,7 +213,7 @@
     <!-- ./contact -->
 
     <!-- ./footer -->
-    <footer id="footer">
+    <!-- <footer id="footer">
       <div class="container">
         <div class="visitor-counter">
           <i class="icofont-rocket"></i> You're the visitor: <strong><span id='visitor-count' data-toggle="counter-up">0</span></strong>
@@ -219,25 +221,25 @@
         <div class="clearfix"></div>
         <div class="h-50"></div>
       </div>
-    </footer>
+    </footer> -->
     <!-- ./footer -->
 
 
     <!-- jQuery -->
-    <script src=js/counter.js></script>
+    <!-- <script src=js/counter.js></script>
     <script src="js/jquery.js"></script>
     <script src="http://cdnjs.cloudflare.com/ajax/libs/waypoints/2.0.3/waypoints.min.js"></script>
-    <script src="js/jquery.counterup.min.js"></script>
+    <script src="js/jquery.counterup.min.js"></script> -->
     <!--  plugins  -->
-    <script src="js/bootstrap.min.js"></script>
+    <!-- <script src="js/bootstrap.min.js"></script>
     <script src="js/plugins.js"></script>
     <script src="js/aos.js"></script>
     <script src="js/jquery.form.js"></script>
-    <script src="js/jquery.validate.min.js"></script>
+    <script src="js/jquery.validate.min.js"></script> -->
 
     <!--  main script  -->
-    <script src="js/custom.js"></script>
-    <script src="js/counter.js"></script>
+    <!-- <script src="js/custom.js"></script>
+    <script src="js/counter.js"></script> -->
 
 </body>
 
