--- a/index.html
+++ b/index.html
@@ -213,7 +213,7 @@
     <!-- ./contact -->
 
     <!-- ./footer -->
-    <!-- <footer id="footer">
+    <footer id="footer">
       <div class="container">
         <div class="visitor-counter">
           <i class="icofont-rocket"></i> You're the visitor: <strong><span id='visitor-count' data-toggle="counter-up">0</span></strong>
@@ -221,25 +221,25 @@
         <div class="clearfix"></div>
         <div class="h-50"></div>
       </div>
-    </footer> -->
+    </footer>
     <!-- ./footer -->
 
 
     <!-- jQuery -->
-    <!-- <script src=js/counter.js></script>
+    <script src=js/counter.js></script>
     <script src="js/jquery.js"></script>
     <script src="http://cdnjs.cloudflare.com/ajax/libs/waypoints/2.0.3/waypoints.min.js"></script>
     <script src="js/jquery.counterup.min.js"></script> -->
     <!--  plugins  -->
-    <!-- <script src="js/bootstrap.min.js"></script>
+    <script src="js/bootstrap.min.js"></script>
     <script src="js/plugins.js"></script>
     <script src="js/aos.js"></script>
     <script src="js/jquery.form.js"></script>
-    <script src="js/jquery.validate.min.js"></script> -->
+    <script src="js/jquery.validate.min.js"></script>
 
     <!--  main script  -->
-    <!-- <script src="js/custom.js"></script>
-    <script src="js/counter.js"></script> -->
+    <script src="js/custom.js"></script>
+    <script src="js/counter.js"></script>
 
 </body>
 
