--- a/index.html
+++ b/index.html
@@ -182,7 +182,7 @@
 
                   <a href="https://www.credly.com/badges/b28523b4-bd1a-48ca-994d-79db76d6974a/public_url"><img class="mb-5" src="img/aws-certified-cloud-practitioner.png" alt="..." /></a>
                   <p class="info"><em class="date">December 2021</em></p><br>
-                  <a href="https://www.credly.com/badges/06eaf2e4-ed89-468c-9538-f793aa8b7823/public_url"><img class="mb-5" src="img/image2.png" alt="..." /></a>
+                  <a href="https://www.credly.com/badges/06eaf2e4-ed89-468c-9538-f793aa8b7823/public_url"><img class="mb-5" src="img/aws-certified-solutions-architect-associate.png" alt="..." /></a>
                   <p class="info"><em class="date">December 2022</em></p>
 
                </div>
@@ -213,7 +213,7 @@
     <!-- ./contact -->
 
     <!-- ./footer -->
-    <footer id="footer">
+    <!-- <footer id="footer">
       <div class="container">
         <div class="visitor-counter">
           <i class="icofont-rocket"></i> You're the visitor: <strong><span id='visitor-count' data-toggle="counter-up">0</span></strong>
@@ -221,7 +221,7 @@
         <div class="clearfix"></div>
         <div class="h-50"></div>
       </div>
-    </footer>
+    </footer> -->
     <!-- ./footer -->
 
 
