--- a/index.html
+++ b/index.html
@@ -20,6 +20,9 @@
       <script src="https://oss.maxcdn.com/html5shiv/3.7.3/html5shiv.min.js"></script>
       <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
     <![endif]-->
+
+
+
 </head>
 
 <body>
@@ -177,15 +180,19 @@
                 <div class="nine columns main-col">
 
             <div class="row item">
+                    <div class="column">
+                    <a href="https://www.credly.com/badges/b28523b4-bd1a-48ca-994d-79db76d6974a/public_url"><img class="mb-5" src="img/aws-certified-cloud-practitioner.png" alt="..." /></a>
+                    </div>
 
-               <div class="twelve columns">
+                    <div class="column">
+                    <a href="https://www.credly.com/badges/06eaf2e4-ed89-468c-9538-f793aa8b7823/public_url"><img class="mb-5" src="img/aws-certified-solutions-architect-associate.png" alt="..." /></a>
+                    </div>
 
-                  <a href="https://www.credly.com/badges/b28523b4-bd1a-48ca-994d-79db76d6974a/public_url"><img class="mb-5" src="img/aws-certified-cloud-practitioner.png" alt="..." /></a>
-                  <p class="info"><em class="date">December 2021</em></p><br>
-                  <a href="https://www.credly.com/badges/06eaf2e4-ed89-468c-9538-f793aa8b7823/public_url"><img class="mb-5" src="img/aws-certified-solutions-architect-associate.png" alt="..." /></a>
-                  <p class="info"><em class="date">December 2022</em></p>
+                    <div class="column">
+                    <a href="https://www.credly.com/badges/e63ca8bc-cdfc-4bbc-8b3f-27c0b9a196ac/public_url"><img class="mb-5" src="img/aws-certified-devops-engineer-professional.png" alt="..." /></a>
+                    </div>
+                  </div>
 
-               </div>
     <!-- ./badges -->
 
     <!-- contact -->
@@ -213,7 +220,7 @@
     <!-- ./contact -->
 
     <!-- ./footer -->
-    <!-- <footer id="footer">
+    <footer id="footer">
       <div class="container">
         <div class="visitor-counter">
           <i class="icofont-rocket"></i> You're the visitor: <strong><span id='visitor-count' data-toggle="counter-up">0</span></strong>
@@ -221,7 +228,7 @@
         <div class="clearfix"></div>
         <div class="h-50"></div>
       </div>
-    </footer> -->
+    </footer>
     <!-- ./footer -->
 
 
@@ -229,7 +236,7 @@
     <script src=js/counter.js></script>
     <script src="js/jquery.js"></script>
     <script src="http://cdnjs.cloudflare.com/ajax/libs/waypoints/2.0.3/waypoints.min.js"></script>
-    <script src="js/jquery.counterup.min.js"></script> -->
+    <script src="js/jquery.counterup.min.js"></script>
     <!--  plugins  -->
     <script src="js/bootstrap.min.js"></script>
     <script src="js/plugins.js"></script>
